Add integration tests for customer controller.